# cloudcode

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  TODOS.md  install.sh  spec-codex-integration.md  spec-vps-session-enhancements.md  tweet-drafts.md
.github/workflows/: ci.yml  release.yml
channel-telegram/: index.ts  package.json
crates/cloudcode-cli/: Cargo.toml  build.rs
crates/cloudcode-cli/src/: cli.rs  config.rs  deploy.rs  main.rs  paths.rs  state.rs
crates/cloudcode-cli/src/commands/: attach.rs  doctor.rs  down.rs  init.rs  kill.rs  list.rs  logs.rs  mod.rs  provider.rs  restart.rs  security.rs  security_report.rs  send.rs  spawn.rs  ssh_cmd.rs  status.rs  up.rs
crates/cloudcode-cli/src/deploy/: provision.rs
crates/cloudcode-cli/src/hetzner/: client.rs  mod.rs  provisioner.rs
crates/cloudcode-cli/src/providers/: digitalocean.rs  hetzner.rs  mod.rs
crates/cloudcode-cli/src/ssh/: connection.rs  health.rs  mod.rs  tunnel.rs
crates/cloudcode-cli/src/tui/: app.rs  mod.rs  steps.rs  ui.rs
crates/cloudcode-common/: Cargo.toml
crates/cloudcode-common/src/: auth.rs  constants.rs  lib.rs  protocol.rs  provider.rs  session.rs
crates/cloudcode-common/tests/: auth_test.rs  protocol_test.rs  session_test.rs
crates/cloudcode-daemon/: Cargo.toml
crates/cloudcode-daemon/src/: config.rs  main.rs
crates/cloudcode-daemon/src/api/: handlers.rs  server.rs
crates/cloudcode-daemon/src/session/: manager.rs  mod.rs  monitor.rs
crates/cloudcode-daemon/src/telegram/: bot.rs  default_session.rs  dispatch.rs  dispatch_server.rs  files.rs  formatter.rs  handlers.rs  mod.rs  question_poller.rs  replies.rs  sender.rs  session_resolution.rs
docs/designs/: multi-provider.md
specs/: codex-sync-and-context-noise.md  session-detach.md  session-sync.md
