[package]
name = "cloudcode-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cloudcode"
path = "src/main.rs"

[dependencies]
cloudcode-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "6"
dialoguer = "0.11"
colored = "3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json"] }
open = "5"
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.11"
