[package]
name = "cloudcode-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cloudcode-daemon"
path = "src/main.rs"

[dependencies]
cloudcode-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
