[package]
name = "cloudcode-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cloudcode-daemon"
path = "src/main.rs"

[dependencies]
cloudcode-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
regex = "1"
axum = "0.8"
